@@ -1,3 +1,9 @@
+2014-02-12 Stefan Bidigaray <stefanbidi@gmail.com>
+	* Source/config.h.in,
+	* configure,
+	* configure.ac: Correctly handle existence of compatible GCD library.
+	* Source/GSUnicode.c: Temperarily disable 96-bit long double error.
+
 2014-01-30 Stefan Bidigaray <stefanbidi@gmail.com>
 	* Source/config.h.in,
 	* configure,
